src/components/PhotoGallery/index.scss
@import '@ergeon/core-components/src/components/variables.scss';
.header-border {
  box-shadow: 0 50px 50px 0 $gray-6, 0 2px 0 0 $gray-5;
  margin-bottom: $v-24;
  @include phone() {
    margin-bottom: $v-12;
  }
}
.photo-gallery {
  &__categories {
    @include phone() {
      padding-bottom: $v-12;
    }
  }

  @include phone() {
    .two-columns {
      display: block;
    }
  }

  &__banner {
    width: 100%;
    height: auto;
    padding: $v-20;

    .is__button-phone {
      display: none;
    }

    @include phone {
      margin-bottom: $v-20;

      .is__button-phone {
        width: 100%;
        display: flex;
        margin-top: $v-20;
      }

      .is__button-desktop {
        display: none;
      }
    }
  }

  &__wrapper {
    position: relative;
    height: auto;
    display: flex;
    background-color: white;

    .photo-gallery__wrapper-photo {
      max-width: 172px;
      max-height: 172px;
      margin-right: 40px;
      width: 40%;
      height: auto;

      @include phone {
        margin: 0 auto;
        width: $h-120;
        height: $v-124 - 4;
      }
    }

    .photo-gallery__wrapper-data {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: flex-start;
      margin-left: $v-20;
    }

    .photo-gallery__banner-description {
      font-size: $font-regular-size;
      text-align: left;
      margin-bottom: 10px;
    }

    &-button {
      display: inline-block;
      padding: 9px 15px;
      padding-right: 20px;
      padding-left: 20px;
      border: 1px solid #e4e9e0;
      border-radius: 4px;
      background-color: #fff;
      font-family: 'Hind Vadodara', sans-serif;
      color: $black-2;

      @include phone-small {
        margin: 0 auto;
      }

      &:hover {
        background-color: #f2f6f0;
        color: $black-2;
      }
    }
  }

  &__partners-area {
    text-align: left;
    border-top: 1px solid #f3f2f2;
    margin-top: 40px;
    padding-top: 40px;
  }

  &__partners {
    display: flex;
    margin-right: -20px;
    flex-wrap: wrap;
    margin-top: 10px;
  }

  &__partner {
    display: flex;
    max-width: 100%;
    width: 280px;
    margin-right: 20px;
    margin-bottom: 12px;
    padding: 10px;
    @include phone() {
      width: 100%;
    }

    &-image {
      flex: 0 0 auto;
      width: 50px;
      height: 50px;
      background-color: #fff;
      background-position: 0px 50%;
      background-size: cover;
      background-repeat: no-repeat;
    }

    &-description {
      display: flex;
      padding-top: 0px;
      padding-bottom: 0px;
      padding-left: 20px;
      align-items: center;
    }

    &-site {
      overflow: hidden;
      height: 16px;
      max-width: 180px;
      margin-top: 6px;
      padding-left: 20px;
      background-color: transparent;
      background-image: url('../../assets/external_link.svg');
      background-position: 0 50%;
      background-size: 16px 16px;
      background-repeat: no-repeat;
      color: $gray-1;
      font-size: 12px;
      line-height: 16px;
      font-weight: 400;
      text-overflow: ellipsis;
      @include phone() {
        max-width: 280px;
      }
    }
  }

  // Masonry JS grid styles
  &__masonry {
    margin: -1 * $h-10;

    @include phone() {
      margin: -1 * $h-5;
    }

    &-card {
      // Set columns. -1 for tablets and phones.
      $columns: 3;

      width: 100 / $columns * 1%;
      padding: $h-10;

      @include tablet() {
        width: 100 / max($columns - 1, 1) * 1%;
      }

      @include phone() {
        padding: $h-5;
      }

      .card {
        // Makes it visually nicer when cards start to move aka re-layout.
        background-color: $white;
      }
    }
  }
}

.breadcrumbs {
  display: flex;
  align-items: center;
  margin-bottom: 6px;

  .icon {
    width: 24px;
    height: 24px;
    &.home {
      display: inline-block;
      background-image: url('../../assets/icon-home-black.svg');
      background-size: auto;
      background-repeat: no-repeat;
      background-position: 50% 50%;
    }
  }

  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  li {
    display: inline-block;
    a {
      text-decoration: none;
      color: $black-3;
      &:hover {
        color: $black-1;
      }
    }
    &:before {
      color: $gray-2;
      content: '/';
      padding: 0 5px;
    }
    &:last-child {
      &:after {
        color: $gray-2;
        content: '/';
        padding: 0 5px;
      }
    }
  }
}

// Rude fix to show photo gallery within viewport size
.react-images__track {
  max-height: 100vh;
}

